<resources>
    <string name="app_name">ChroMagic</string>
    <string name="app_name1">ChroMagic.</string>
    <string name="menu">Menu</string>
    <string name="selectFromGallery">Select from Gallery</string>
    <string name="takeImageWithCamera">Take Image with Camera</string>
    <string name="selectedImage">Selected\n</string>
    <string name="about">About</string>
    <string name="report_bug">Report Bug</string>
    <string name="help">Help</string>
    <string name="share_menu">Share</string>
    <string name="download_menu">Download</string>
    <string name="plus">+</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="get_started">GET STARTED</string>
    <string name="instant_colorization">Instant Colorization</string>
    <string name="enhance_image">Photo Enhancer</string>
    <string name="enhance_image_description">With just one click, you can now enhance photo resolutions, improve quality, and unblur photos really quick.</string>
    <string name="instant_colorization_description">With Deep Learning based Photo Colorizer, you can add consistent and natural colors to your old black and white photos.</string>
    <string name="remove_bg_image">Remove Background</string>
    <string name="remove_bg_image_description">Instantly remove background from your photos with just one click with superb cutout quality and stunning edge details</string>
    <string name="designed_by">Designed By</string>
    <string name="version">version 1.0.0</string>
    <string name="aboutApp">About App</string>
    <string name="appSettings">App Settings</string>
    <string name="redo">Redo\n</string>
    <string name="undo">Undo</string>
    <string name="history">History</string>
    <string name="colorizeImage">Colorize Image</string>
    <string name="sliding_images">Sliding Images</string>
    <string name="metadata">Metadata</string>
    <string name="current_image">Current Image</string>
    <string name="change_language">Change Language</string>
    <string name="light_mode">Light Mode</string>
    <string name="photo_details">Photo Details</string>
    <string name="select_photo_from_gallery">Select Photo From Gallery</string>
    <string name="take_photo_using_camera">Take Photo Using Camera</string>
    <string name="menu_options">Menu Options</string>
    <string name="colorize">Colorize</string>
    <string name="history_icon_desc">History</string>
    <string name="undo_icon_desc">Undo</string>
    <string name="redo_icon_desc">Redo</string>
    <string name="settings">Settings</string>
    <string name="about_app">About App</string>
    <string name="chromia_desc">Hi, I am ChroMia, your AI Chatbot. How can I help you ?</string>
    <string name="type_a_message">Ask something</string>
    <string name="remove_image">remove_image</string>
    <string name="user_message">User Message</string>
    <string name="chatbots_message">Chatbot\'s Message</string>
    <string name="about_chromagic">About ChroMagic</string>
    <string name="about_desc">Welcome to ChroMagic – Redefining Image Transformation!</string>
    <string name="key_features">Key Features</string>
    <string name="key_features_desc"><![CDATA[• Colorize Black & White Photos\n• Photo Pixel Enhancement\n• Photo Background Removal\n• User-Friendly Interface\n• Supports Multiple Languages\n• Chat Support With Chatbot\n• Share Your Creations]]></string>
    <string name="our_mission">Our Mission</string>
    <string name="our_mission_desc">At ChroMagic, we aim to make image transformation accessible to everyone by merging powerful AI technologies with simplicity and elegance.</string>
    <string name="feedback_and_support">Feedback and Support</string>
    <string name="feedback_support_desc">We value your feedback to make ChroMagic even better! Report bugs or suggestions through the in-app \'Report Bug\' option.</string>
    <string name="credits_and_acknowledgments">Credits and Acknowledgments</string>
    <string name="credits_desc">Based on - DeOldify, ESRGAN, and MODNet. Special thanks to our dedicated team and community!</string>
    <string name="app_logo">appLogo</string>
    <string name="chat_support">Chat Support</string>
    <string name="chatsupport_desc">We have ChroMia, our AI chatbot to assist the users with various app-related queries.</string>
    <string name="about_developers">About Developers</string>
    <string name="about_riddhi">Riddhi Mitra\nRole: App Designer\nA 4th year B.Tech(ECE) student from GNIT, Kolkata. He is a passionate Android Developer.</string>
    <string name="about_arkajit">Arkajit Bhattacharjee\nRole: App Backend Handler\nA 4th year B.Tech(ECE) student from GNIT, Kolkata. He is a passionate Android Developer.</string>
    <string name="about_kunal">Kunal Bag\nRole: AI-ML Engineer\nA 4th year B.Tech(AI-ML) student from NSEC, Kolkata.He is a Machine Learning Engineer.</string>
    <string name="why_chromagic">Why ChroMagic ?</string>
    <string name="why_chromagic_desc">ChroMagic stands out for its blend of AI innovation and user-centric design. Our state-of-the-art algorithms ensure precise, high-quality results, making it the perfect choice for photography enthusiasts, content creators, and anyone who cherishes their photos.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_desc">chromagic.developers at Gmail</string>
    <string name="based_on">Based on DeOldify, Real-ESRGAN, MODNet.</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="all_rights_reserved">All Rights Reserved.</string>
</resources>
