<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="@color/subtleBlue1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/chromagic_app_logo"
            android:layout_marginTop="200dp"/>

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="23sp"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="13sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="normal"
            android:layout_marginTop="12dp"
            android:textColor="@color/light_white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="250dp">

            <TextView
                android:id="@+id/designer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designed_by"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/light_white"
                android:layout_marginTop="2dp"
                android:layout_marginStart="0dp"/>

            <ImageView
                android:id="@+id/designerLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rak_designer_logo"
                android:adjustViewBounds="true"
                android:layout_marginStart="8dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
